Bug 253280 - [IFC][Partial layout] Always fall back to full invalidation when partial fails
Summary: [IFC][Partial layout] Always fall back to full invalidation when partial fails
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: zalan
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-03-02 16:47 PST by zalan
Modified: 2023-03-04 06:22 PST (History)
12 users (show)

See Also:


Attachments
Patch (10.91 KB, patch)
2023-03-02 16:52 PST, zalan
no flags Details | Formatted Diff | Diff
Patch (11.09 KB, patch)
2023-03-02 21:15 PST, zalan
no flags Details | Formatted Diff | Diff
[fast-cq]Patch (9.64 KB, patch)
2023-03-03 16:08 PST, zalan
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description zalan 2023-03-02 16:47:45 PST
ssia
Comment 1 zalan 2023-03-02 16:52:32 PST
Created attachment 465269 [details]
Patch
Comment 2 zalan 2023-03-02 21:15:16 PST
Created attachment 465273 [details]
Patch
Comment 3 zalan 2023-03-03 16:08:27 PST
Created attachment 465286 [details]
[fast-cq]Patch
Comment 4 EWS 2023-03-04 06:21:22 PST
Committed 261221@main (d008eba10624): <https://commits.webkit.org/261221@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 465286 [details].
Comment 5 Radar WebKit Bug Importer 2023-03-04 06:22:27 PST
<rdar://problem/106233151>