[IFC][Partial layout] Always fall back to full invalidation when partial fails https://bugs.webkit.org/show_bug.cgi?id=253280

Reviewed by Antti Koivisto.

This patch ensures that if we couldn't figure out the damaged range, we fall back
to full invalidation reverting partial tree mutations.

* Source/WebCore/layout/formattingContexts/inline/invalidation/InlineDamage.h:
* Source/WebCore/layout/formattingContexts/inline/invalidation/InlineInvalidation.cpp:
(WebCore::Layout::InlineInvalidation::textInserted):
(WebCore::Layout::InlineInvalidation::textWillBeRemoved):
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::layout):
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.h:
(WebCore::LayoutIntegration::LineLayout::isDamaged const):
* Source/WebCore/rendering/RenderObject.cpp:
(WebCore::RenderObject::insertedIntoTree):
* Source/WebCore/rendering/RenderText.cpp:
(WebCore::invalidateLineLayoutPathOnContentChangeIfNeeded):

Canonical link: https://commits.webkit.org/261221@main